content/vagrant/v2.2.10/content/docs/providers/vmware/vagrant-vmware-utility.mdx
---
layout: docs
page_title: Installation - VMware Provider
sidebar_title: VMware Utility
description: |-
  The Vagrant VMware Utility works with the Vagrant VMware Provider to
  interact with the system VMware installation.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-20T11:55:22-05:00
last_modified: 2025-11-20T11:55:22-05:00
# END AUTO GENERATED METADATA
---

import { VMWARE_UTILITY_VERSION } from 'data/version.json'

# Vagrant VMware Utility Installation

## System Packages

The Vagrant VMware Utility is provided as a system package. To install the
utility, download and install the correct system package from the downloads
page.

<Button title={`Download ${VMWARE_UTILITY_VERSION}`} url="/vmware/downloads" />

## Manual Installation

If there is no officially supported system package of the utility available,
it may be possible to manually install utility. This applies to Linux platforms
only. First, download the latest zip package from the releases page.

Next create a directory for the executable and unpack the executable as
root.

```shell-session
$ sudo mkdir -p /opt/vagrant-vmware-desktop/bin
$ sudo unzip -d /opt/vagrant-vmware-desktop/bin vagrant-vmware-utility_1.0.0_linux_amd64.zip
```

After the executable has been installed, the utility setup tasks must be run. First,
generate the required certificates:

```shell-session
$ sudo /opt/vagrant-vmware-desktop/bin/vagrant-vmware-utility certificate generate
```

The path provided from this command can be used to set the [`utility_certificate_path`](/docs/vmware/configuration#utility_certificate_path) in the Vagrantfile
configuration if installing to a non-standard path.

Finally, install the service. This will also enable the service.

```shell-session
$ sudo /opt/vagrant-vmware-desktop/bin/vagrant-vmware-utility service install
```

# Usage

The Vagrant VMware Utility provides the Vagrant VMware provider plugin access
to various VMware functionalities. The Vagrant VMware Utility is required by
the Vagrant VMware Desktop provider plugin.

## Vagrant VMware Utility Access

The Vagrant VMware Utility provides support for all users on the system using
the Vagrant VMware Desktop plugin. If access restrictions to the Utility need
to be applied to users on the system, this can be accomplished by restricting
user access to the certificates used for connecting to the service.

On Windows platforms these certificates can be found at:

```text
C:\ProgramData\HashiCorp\vagrant-vmware-desktop\certificates
```

On POSIX platforms these certificates can be found at:

```text
/opt/vagrant-vmware-desktop/certificates
```

## Vagrant VMware Utility Service

The Vagrant VMware Utility consists of a small service which runs on the
host platform. When the utility installer package is installed, the service
is configured to automatically start. If the plugin reports errors communicating
with the service, it may have stopped for some reason. The most common cause of
the service not being in a running state is the VMware application not being
installed. The service can be started again by using the proper command below:

### Windows

On Windows platforms a service is created called `vagrant-vmware-utility`. The
service can be manually started using the services GUI (`services.msc`) or by
running the following command from a `cmd.exe` in administrator mode:

```shell-session
$ net.exe start vagrant-vmware-utility
```

### macOS

```shell-session
$ sudo launchctl load -w /Library/LaunchDaemons/com.vagrant.vagrant-vmware-utility.plist
```

### Linux systemd

```shell-session
$ sudo systemctl start vagrant-vmware-utility
```

### Linux SysVinit

```shell-session
$ sudo /etc/init.d/vagrant-vmware-utility start
```

### Linux runit

```shell-session
$ sudo sv start vagrant-vmware-utility
```
